Try to stop horizontal scrolling on mobile

--- a/docs/stylesheets/fusion.css
+++ b/docs/stylesheets/fusion.css
@@ -4,7 +4,7 @@
 	scroll-behavior: smooth;
 }
 
-body {
+:root {
 	overflow-x: hidden;
 }
 
